# MAMEUIx

./: .SRCINFO  .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  ADVANCED_MAME_SETTINGS_FIX.md  ADVANCED_MAME_SETTINGS_FIXES.md  ADVANCED_MAME_SETTINGS_IMPLEMENTATION_COMPLETE.md  ADVANCED_MAME_SETTINGS_POC.md  ARCH_PACKAGE_README.md  BGFX_GLSL_INTEGRATION.md  CATEGORIZED_FILTER_DESIGN.md  CHANGELOG.md  COLUMN_IMPROVEMENTS_2024.md  Cargo.toml  Cargo.toml.backup  GAME_LIST_VIEW_IMPLEMENTATION_COMPLETE.md  ICON_LOADING_PERFORMANCE.md  INSTALL.md  LICENSE  LINUX_SEPARATOR_FEATURE.md  MAMEUIX_ADVANCED_ARCHITECTURE.md  MAMEUIX_REFINED_UI_DESIGN.md  MAME_EXECUTABLE_PATHS.md  MAME_FOLDER_CONFIGURATION.md  MAME_FOLDER_STRUCTURE.md  PACKAGING.md  PANEL_LAYOUT_IMPROVEMENTS.md  PKGBUILD  README.md  RELEASE_v0.1.4.md  SHADER_VALIDATION_INTEGRATION.md  UI_IMPROVEMENTS.md  UI_IMPROVEMENTS_2024.md  UI_REDESIGN_CONCEPT.md  build-appimage-docker.sh  build-appimage.sh  build-arch-package.sh  build-arch.sh  build-deb.sh  build-packages.sh  build-rpm.sh  (+13 more)
Plans/: mameuix-styled-mockup.html
cfg/: 1943mii.cfg  1944.cfg  1945kiii.cfg  1945kiiio.cfg  1945kiiipt.cfg  64street.cfg  altbeast.cfg  bmaster.cfg  gauntdl.cfg  gtmr.cfg  mc_110cb.cfg  openice.cfg  progolf.cfg  thrild2.cfg
debian/: changelog  control  mame-frontend.1  mameuix.1  rules
docs/: BGFX_GLSL_INTEGRATION.md  INSTALL.md  MAME_FOLDER_STRUCTURE.md  README.md
examples/: advanced_mame_settings_demo.rs  advanced_mame_settings_poc.rs  advanced_mame_settings_viewport_demo.rs  advanced_mame_settings_viewport_standalone.rs  basic_enhanced_demo.rs  (+5 more)
(+134 files in other folders)
