[package]
name = "mameuix"
version = "0.1.1"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
eframe = "0.32"
egui = "0.32"
egui_extras = "0.32"  # ADD THIS - needed for optimized table rendering
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.2"
walkdir = "2.5"
dirs = "6.0"
anyhow = "1.0.98"
image = { version = "0.25.6", features = ["png", "jpeg", "ico"] }
rfd = "0.15.4"
rayon = "1.10"
zip = "4.3"
chrono = { version = "0.4.41", features = ["serde"] }
quick-xml = "0.38"

[dev-dependencies]
tempfile = "3.10"

# Test binaries commented out to avoid compilation issues
# [[bin]]
# name = "test_category_system"
# path = "src/test_category_system.rs"

# [[bin]]
# name = "test_config_save"
# path = "test_config_save.rs"

# [[bin]]
# name = "test_bgfx_glsl"
# path = "src/test_bgfx_glsl.rs"




